--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base-fullscreen.html" %}
 
-{% block title %} Sign IN {% endblock %} 
+{% block title %} Ingresar {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -10,22 +10,20 @@
     <main>
         <section class="vh-lg-100 mt-5 mt-lg-0 bg-soft d-flex align-items-center">
             <div class="container">
+                <p class="text-center">
+                    <a href="/index" class="d-flex align-items-center justify-content-center">
+                        <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd"></path></svg>
+                        Regresar al inicio
+                    </a>
+                </p>
                 
                 <div class="row justify-content-center form-bg-image" data-background-lg="{{ config.ASSETS_ROOT }}/img/illustrations/signin.svg">
                     <div class="col-12 d-flex align-items-center justify-content-center">
                         <div class="bg-white shadow border-0 rounded border-light p-4 p-lg-5 w-100 fmxw-500">
                             <div class="text-center text-md-center mb-4 mt-md-0">
                                 <h1 class="mb-0 h3">
-                                    Iniciar sesión
-                                </h1>
-                                <br />
-                                <p>
-                                    {% if msg %}
-                                        <span class="text-danger">{{ msg | safe }}</span>
-                                    {% else %}
-                                    Añade tus credenciales
-                                    {% endif %}                                     
-                                </p> 
+                                    Iniciar Sesión
+                                </h1> 
                             </div>
                             <form method="post" action="" class="mt-4">
                                 
@@ -38,7 +36,7 @@
                                         <span class="input-group-text" id="basic-addon1">
                                             <span class="fas fa-user-circle"></span>
                                         </span>
-                                        {{ form.username(placeholder="Nombre de usuario", class="form-control") }}
+                                        {{ form.username(placeholder="miusuario", class="form-control") }}
                                     </div>  
                                 </div>
                                 <!-- End of Form -->
@@ -58,11 +56,8 @@
                                         <div class="form-check">
                                             <input class="form-check-input" type="checkbox" value="" id="remember">
                                             <label class="form-check-label mb-0" for="remember">
-                                                Recordar sesión
+                                                Recordar mis datos
                                             </label>
-                                        </div>
-                                        <div>
-                                            <a href="{{ url_for('authentication_blueprint.register') }}" class="fw-bold text-right">Registrar</a>
                                         </div>
                                     </div>
                                 </div>
@@ -70,6 +65,12 @@
                                     <button type="submit" name="login" class="btn btn-gray-800">Iniciar sesión</button>
                                 </div>
                             </form>
+                            <div class="d-flex justify-content-center align-items-center mt-4">
+                                <span class="fw-normal">
+                                    No estas registrado?
+                                    <a href="{{ url_for('authentication_blueprint.register') }}" class="fw-bold">Crear cuenta</a>
+                                </span>
+                            </div>
                             <br />
                             
                             {% if config.SOCIAL_AUTH_GITHUB %}
