--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base-fullscreen.html" %}
 
-{% block title %} Sign UP {% endblock %} 
+{% block title %} Registro {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -10,22 +10,19 @@
     <main>
         <section class="vh-lg-100 mt-5 mt-lg-0 bg-soft d-flex align-items-center">
             <div class="container">
-            
+                <p class="text-center">
+                    <a href="/index" class="d-flex align-items-center justify-content-center">
+                        <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd"></path></svg>
+                        Regresar al inicio
+                    </a>
+                </p>
                 <div class="row justify-content-center form-bg-image" data-background-lg="{{ config.ASSETS_ROOT }}/img/illustrations/signin.svg">
                     <div class="col-12 d-flex align-items-center justify-content-center">
                         <div class="bg-white shadow border-0 rounded border-light p-4 p-lg-5 w-100 fmxw-500">
                             <div class="text-center text-md-center mb-4 mt-md-0">
                                 <h1 class="mb-0 h3">
-                                    Registrar
-                                </h1>
-                                <br />
-                                <p>
-                                    {% if msg %}
-                                        {{ msg | safe }}
-                                    {% else %}
-                                    Añade tus credenciales
-                                    {% endif %}                                     
-                                </p> 
+                                    Crear Cuenta
+                                </h1> 
                             </div>
                             
                             {% if success %}
@@ -47,7 +44,7 @@
                                             <span class="input-group-text" id="basic-addon1">
                                                 <span class="fas fa-user-circle"></span>
                                             </span>
-                                            {{ form.username(placeholder="Username", class="form-control") }}
+                                            {{ form.username(placeholder="miusuario", class="form-control") }}
                                         </div>  
                                     </div>
 
@@ -58,7 +55,7 @@
                                             <span class="input-group-text" id="basic-addon1">
                                                 <span class="fas fa-envelope"></span>
                                             </span>
-                                            {{ form.email(placeholder="Correo electrónico", class="input form-control", type="email") }}
+                                            {{ form.email(placeholder="ejemplo@email.com", class="input form-control", type="email") }}
                                         </div>  
                                     </div>
                                     <!-- End of Form -->
@@ -78,7 +75,7 @@
                                             <div class="form-check">
                                                 <input class="form-check-input" type="checkbox" value="" id="remember">
                                                 <label class="form-check-label fw-normal mb-0" for="remember">
-                                                    I agree to the <a href="#" class="fw-bold">terms and conditions</a>
+                                                    Aceptar <a href="#" class="fw-bold">terminos y condiciones</a>
                                                 </label>
                                             </div>
                                         </div>
@@ -87,11 +84,10 @@
                                         <button type="submit" name="register" class="btn btn-gray-800">Registrar</button>
                                     </div>
                                 </form>
-                                <br />
                                 <div class="d-flex justify-content-center align-items-center mt-4">
                                     <span class="fw-normal">
-                                        Already have an account? 
-                                        <a href="{{ url_for('authentication_blueprint.login') }}" class="fw-bold">Sign IN</a>
+                                        Ya tienes una cuenta? 
+                                        <a href="{{ url_for('authentication_blueprint.login') }}" class="fw-bold">Ingresa aqui</a>
                                     </span>
                                 </div>
                             
