--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -23,7 +23,7 @@
 <!-- Primary Meta Tags -->
 
 <title>
-    Flask Volt Dashboard - {% block title %}{% endblock %} | AppSeed
+    Rankig Movies - {% block title %}{% endblock %}
 </title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -74,8 +74,6 @@
       {% include 'includes/navigation.html' %}
 
       {% block content %}{% endblock content %} 
-
-      {% include 'includes/settings-box.html' %}
 
       {% include 'includes/footer.html' %}
 
