--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -82,7 +82,7 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <div class="bootstrap-big-icon d-none d-lg-block">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="700" height="622" class="d-block my-1" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
+                            <img class="shadow-lg rounded scale" src="{{ config.ASSETS_ROOT }}/img/pages/movies.jpg" alt="Sign Up page preview">
                         </div>
                         <h1 class="fw-bolder">Ranking Movie</h1>
                         <h2 class="lead fw-normal text-muted mb-5">Gestiona el ranking de tus peliculas</h2>
@@ -127,18 +127,18 @@
                 </div>
                 <div class="row mb-5">
                     <div class="col-6 mb-5">
-                        <a href="{{ url_for('authentication_blueprint.register') }}" class="page-preview scale-up-2">
-                            <img class="shadow-lg rounded scale" src="{{ config.ASSETS_ROOT }}/img/pages/sign-up.jpg" alt="Sign Up page preview">
+                        <a href="#" class="page-preview scale-up-2">
+                            <img class="shadow-lg rounded scale" src="{{ config.ASSETS_ROOT }}/img/pages/cinema.jpg" alt="Sign Up page preview">
                             <div class="text-center show-on-hover rounded-bottom">
-                                <h6 class="m-0 text-center d-inline-flex align-items-center text-white">Registro<svg class="icon icon-xs ms-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z"></path><path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z"></path></svg></h6>
+                                <h6 class="m-0 text-center d-inline-flex align-items-center text-white">Cinema<svg class="icon icon-xs ms-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z"></path><path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z"></path></svg></h6>
                             </div>
                         </a>
                     </div>
                     <div class="col-6 mb-5">
-                        <a href="{{ url_for('authentication_blueprint.login') }}" class="page-preview scale-up-2">
-                            <img class="shadow-lg rounded scale" src="{{ config.ASSETS_ROOT }}/img/pages/sign-in.jpg" alt="Sign In page preview">
+                        <a href="#" class="page-preview scale-up-2">
+                            <img class="shadow-lg rounded scale" src="{{ config.ASSETS_ROOT }}/img/pages/popcorn.jpg" alt="Sign In page preview">
                             <div class="text-center show-on-hover rounded-bottom">
-                                <h6 class="m-0 text-center d-inline-flex align-items-center text-white">Ingresar<svg class="icon icon-xs ms-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z"></path><path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z"></path></svg></h6>
+                                <h6 class="m-0 text-center d-inline-flex align-items-center text-white">Popcorn<svg class="icon icon-xs ms-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z"></path><path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z"></path></svg></h6>
                             </div>
                         </a>
                     </div>
