--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -29,7 +29,7 @@
 
                                 <div class="d-grid">
                                     <a href="{{ url_for('authentication_blueprint.login') }}" 
-                                       class="btn btn-gray-800">Inscribir</a>
+                                       class="btn btn-gray-800">Ingresar</a>
                                 </div>
 
                             {% else %}
