--- a/apps/templates/home/settings.html
+++ b/apps/templates/home/settings.html
@@ -41,7 +41,7 @@
                             <select class="form-select mb-0" id="gender" aria-label="Gender select example" name="gender">
                                 <option selected>Seleccione...</option>
                                 <option value="Masculino">Masculino</option>
-                                <option value="Masculino">Femenino</option>
+                                <option value="Femenino">Femenino</option>
                             </select>
                         </div>
                     </div>
@@ -66,45 +66,53 @@
             </div>
             <div class="card card-body border-0 shadow mb-4">
                 <h2 class="h5 mb-4">Modificar cuenta</h2>
-                <form method="POST" action="/moduser">
+               
                     <div class="row">
                         <div class="col-md-6 mb-3">
+                            <form method="POST" action="/moduser">
                             <div>
                                 <label for="first_name">Editar usuario</label>
                                 <input class="form-control" id="user" type="user" name="username" placeholder="Nuevo usuario">
                                 <br>
                                 <button class="btn btn-outline-success d-inline-flex align-items-center me-md-3" id="edit_user" type="submit">Guardar usuario</button>
                             </div>
+                        </form>
                         </div>
-                    </form>
-                    <form method="POST" action="/modpassword">
+                    
+                    
                         <div class="col-md-6 mb-3">
+                            <form method="POST" action="/modpassword">
                             <div>
                                 <label for="last_name">Editar contraseña</label>
-                                <input class="form-control" id="password" name="password" type="text" placeholder="Nueva contraseña">
+                                <input class="form-control" id="password" name="password" type="password" placeholder="Nueva contraseña">
                                 <br>
                                 <button class="btn btn-outline-success d-inline-flex align-items-center me-md-3" id="edit_pass" type="submit">Guardar contraseña</button>
                             </div>
+                        </form>
                         </div>
                     </div>
-                </form>
+                
             </div>
             <div class="card card-body border-0 shadow mb-4">
                 <h2 class="h5 mb-4">Borrar Datos</h2>
-                <form>
+                
                     <div class="row">
                         <div class="col-md-6 mb-3">
+                            <form>
                             <div>
                                 <button class="btn btn-outline-danger d-inline-flex align-items-center me-md-3" id="delete_photo" type="submit">Eliminar foto</button>
                             </div>
+                        </form>
                         </div>
                         <div class="col-md-6 mb-3">
+                        <form method="POST", action="/deleteuser">
                             <div>
                                 <button class="btn btn-outline-danger d-inline-flex align-items-center me-md-3" id="delete_user" type="submit">Eliminar usuario</button>
                             </div>
+                        </form>
                         </div>
                     </div>
-                </form>
+               
             </div>
         </div>
         <div class="col-12 col-xl-4">
@@ -113,7 +121,7 @@
                     <div class="card shadow border-0 text-center p-0">
                         <div class="profile-cover rounded-top" data-background="{{ config.ASSETS_ROOT }}/img/profile-cover.jpg"></div>
                         <div class="card-body pb-5">
-                            <img src="{{ config.ASSETS_ROOT }}/img/team/profile-picture-3.jpg" class="avatar-xl rounded-circle mx-auto mt-n7 mb-4" alt="Image user">
+                            <img src="{{infoimage}}" class="avatar-xl rounded-circle mx-auto mt-n7 mb-4" alt="Image user">
                             <h5 class="h5">
                                 {{info.frist_name+" "+info.last_name}}
                             </h5>
@@ -123,21 +131,26 @@
                 </div>
                 <div class="col-12">
                     <div class="card card-body border-0 shadow mb-4">
-                        <h2 class="h5 mb-4">Select profile photo</h2>
+                        <h2 class="h5 mb-4">Seleccionar foto de perfil</h2>
                         <div class="d-flex align-items-center">
                             <div class="me-3">
                                 <!-- Avatar -->
-                                <img class="rounded avatar-xl" src="{{ config.ASSETS_ROOT }}/img/team/profile-picture-3.jpg" alt="change avatar">
+                                <img class="rounded avatar-xl" src="{{infoimage}}" alt="change avatar">
                             </div>
                             <div class="file-field">
                                 <div class="d-flex justify-content-xl-center ms-xl-3">
                                     <div class="d-flex">
-                                        <svg class="icon text-gray-500 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z" clip-rule="evenodd"></path></svg>
-                                        <input type="file">
+                                        <form method="POST" action="/regisuserimage" enctype="multipart/form-data">
+                                        <input type="file"  accept=".jpg, .gif, .jpeg, .png" name="avatar" >
                                         <div class="d-md-block text-left">
-                                            <div class="fw-normal text-dark mb-1">Choose Image</div>
+                                            <svg class="icon text-gray-500 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z" clip-rule="evenodd"></path></svg>
+                                            <div class="fw-normal text-dark mb-1">Seleccionar imagen</div>
                                             <div class="text-gray small">JPG, GIF or PNG. Max size of 800K</div>
                                         </div>
+                                        <div class="mt-3">
+                                            <button class="btn btn-outline-primary d-inline-flex align-items-center me-md-3" type="submit">Guardar</button>
+                                        </div>
+                                    </form>
                                     </div>
                                 </div>
                               </div>                                        
@@ -146,7 +159,7 @@
                 </div>
                 <div class="col-12">
                     <div class="card card-body border-0 shadow">
-                        <h2 class="h5 mb-4">Select cover photo</h2>
+                        <h2 class="h5 mb-4">Seleccionar imagen de fondo</h2>
                         <div class="d-flex align-items-center">
                             <div class="me-3">
                                 <!-- Avatar -->
@@ -155,12 +168,15 @@
                             <div class="file-field">
                                 <div class="d-flex justify-content-xl-center ms-xl-3">
                                     <div class="d-flex">
-                                        <svg class="icon text-gray-500 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z" clip-rule="evenodd"></path></svg>
-                                        <input type="file",name="avatar">
+                                        <form>
+                                       
+                                        <input type="file" id="imagecover" name="cover" accept=".jpg, .gif, .jpeg, .png">
                                         <div class="d-md-block text-left">
-                                            <div class="fw-normal text-dark mb-1">Choose Image</div>
+                                            <svg class="icon text-gray-500 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z" ></path></svg>
+                                            <div class="fw-normal text-dark mb-1">Seleccionar imagen</div>
                                             <div class="text-gray small">JPG, GIF or PNG. Max size of 800K</div>
                                         </div>
+                                    </form>
                                     </div>
                                 </div>
                               </div>                                        
