--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -10,7 +10,7 @@
                     <li class="nav-item dropdown ms-lg-3">
                       <a class="nav-link dropdown-toggle pt-1 px-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <div class="media d-flex align-items-center">
-                          <img class="avatar rounded-circle" alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team/profile-picture-3.jpg">
+                          <img class="avatar rounded-circle" alt="Image placeholder" src="{{infoimage}}">
                           <div class="media-body ms-2 text-dark align-items-center d-none d-lg-block">
                             <span class="mb-0 font-small fw-bold text-gray-900">
                               <strong>{{ current_user.username }}</strong>
