--- a/apps/templates/home/settings.html
+++ b/apps/templates/home/settings.html
@@ -98,7 +98,7 @@
                 
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <form>
+                            <form method="POST", action="/deleimageperfil" >
                             <div>
                                 <button class="btn btn-outline-danger d-inline-flex align-items-center me-md-3" id="delete_photo" type="submit">Eliminar foto</button>
                             </div>
