--- a/apps/templates/home/settings.html
+++ b/apps/templates/home/settings.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Settings {% endblock %} 
+{% block title %} Configuración de sessión {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -119,7 +119,7 @@
             <div class="row">
                 <div class="col-12 mb-4">
                     <div class="card shadow border-0 text-center p-0">
-                        <div class="profile-cover rounded-top" data-background="{{ config.ASSETS_ROOT }}/img/profile-cover.jpg"></div>
+                        <div class="profile-cover rounded-top" data-background="{{infocover}}"></div>
                         <div class="card-body pb-5">
                             <img src="{{infoimage}}" class="avatar-xl rounded-circle mx-auto mt-n7 mb-4" alt="Image user">
                             <h5 class="h5">
@@ -163,18 +163,21 @@
                         <div class="d-flex align-items-center">
                             <div class="me-3">
                                 <!-- Avatar -->
-                                <img class="rounded avatar-xl" src="{{ config.ASSETS_ROOT }}/img/profile-cover.jpg" alt="change cover">
+                                <img class="rounded avatar-xl" src="{{infocover}}" alt="change cover">
                             </div>
                             <div class="file-field">
                                 <div class="d-flex justify-content-xl-center ms-xl-3">
                                     <div class="d-flex">
-                                        <form>
+                                        <form method="POST" action="/regisimagencover" enctype="multipart/form-data">
                                        
                                         <input type="file" id="imagecover" name="cover" accept=".jpg, .gif, .jpeg, .png">
                                         <div class="d-md-block text-left">
                                             <svg class="icon text-gray-500 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z" ></path></svg>
                                             <div class="fw-normal text-dark mb-1">Seleccionar imagen</div>
                                             <div class="text-gray small">JPG, GIF or PNG. Max size of 800K</div>
+                                        </div>
+                                        <div class="mt-3">
+                                            <button class="btn btn-outline-primary d-inline-flex align-items-center me-md-3" type="submit">Guardar</button>
                                         </div>
                                     </form>
                                     </div>
