--- a/apps/templates/home/settings.html
+++ b/apps/templates/home/settings.html
@@ -119,7 +119,9 @@
             <div class="row">
                 <div class="col-12 mb-4">
                     <div class="card shadow border-0 text-center p-0">
-                        <div class="profile-cover rounded-top" data-background="{{infocover}}"></div>
+                        <div class="profile-cover rounded-top " >
+                            <img src="{{infocover}}" class="profile-cover mx-auto " alt="Image user">
+                        </div>
                         <div class="card-body pb-5">
                             <img src="{{infoimage}}" class="avatar-xl rounded-circle mx-auto mt-n7 mb-4" alt="Image user">
                             <h5 class="h5">
